<?xml version="1.0" encoding="utf-8"?>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:shrinkColumns="0"
        android:stretchColumns="1" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:text="@string/Desti" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="15dip"
                android:gravity="right"
                android:singleLine="true" />
        </LinearLayout>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="125dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:text="@string/Lat_desti" />

            <TextView
                android:id="@+id/latdest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dip"
                android:gravity="right"
                android:text="@string/DefaultValue"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="125dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:text="@string/Long_desti" />

            <TextView
                android:id="@+id/longdest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dip"
                android:gravity="right"
                android:text="@string/DefaultValue"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="125dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:text="@string/Lat_act" />

            <TextView
                android:id="@+id/latact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dip"
                android:gravity="right"
                android:text="@string/DefaultValue"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="125dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:text="@string/Long_act" />

            <TextView
                android:id="@+id/longact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dip"
                android:gravity="right"
                android:text="@string/DefaultValue"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="125dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:text="@string/Dist" />

            <TextView
                android:id="@+id/dist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dip"
                android:gravity="right"
                android:text="@string/DefaultValue"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#F00" />
        </TableRow>

    </TableLayout>
